Второй урок(почти доделали Главную страницу)

--- a/index.html
+++ b/index.html
@@ -8,21 +8,75 @@
 <body>
 <div class="container main">
     <div class="header">
-        <img src="images/logo.png" id="logo">
+        <img src="images/logo.png" class="logo">
         <div class="header_wrapper">
             <a class="header_link" href="#">Главная</a>
             <a class="header_link" href="#">Уроки</a>
-            <a class="header_link" href="#">О портале</a>
+            <a class="header_link" href="#">Формулы</a>
         </div>
     </div>
+    <div></div>
     <div class="title">
         <h1>Проект</h1>
         <h3 class="subtitle">Мы крутые</h3>
     </div>
     <img id="circle" src="images/circle.png">
 </div>
+<div class="container about">
+    <div class="line"></div>
+    <h2>О нас</h2>
+    <div class="about-item about1">
+        <div class="about-item-text">
+            Тест Тест Тест Тест Тест Тест Тест <br/> Тест Тест Тест
+            Тест Тест Тест Тест Тест Тест Тест <br/> Тест Тест Тест
+            Тест Тест Тест Тест Тест Тест Тест <br/> Тест Тест Тест
+            Тест Тест Тест Тест Тест Тест Тест <br/> Тест Тест Тест
+        </div>
+        <img class="about-item-image" src="images/logo.png">
+    </div>
+    <div class="about-item about2">
+        <div class="about-item-text">
+            Тест Тест Тест Тест Тест Тест Тест <br/> Тест Тест Тест
+            Тест Тест Тест Тест Тест Тест Тест <br/> Тест Тест Тест
+            Тест Тест Тест Тест Тест Тест Тест <br/> Тест Тест Тест
+            Тест Тест Тест Тест Тест Тест Тест <br/> Тест Тест Тест
+        </div>
+        <img class="about-item-image" src="images/logo.png">
+    </div>
+</div>
+<div class="container teachers">
+    <div class="line"></div>
+    <h2>Наши преподаватели</h2>
+    <div class="teachers-list">
+        <div class="teacher-item">
+            <img src="images/img_1.png" class="teacher-item-image"/>
+            <h3>Алексеева Ольга Александровна</h3>
+            <h4>Профессиональный организатор выставок, презентаций, конференций, корпоративных и частных праздников, детских программ, фестивалей и Open Air, BTL и PR-акций , мероприятий в сфере обучения и консалтинга. Талантливый педагог, преподаёт курс «Event-менеджмент» в Центре «Специалист».</h4>
+        </div>
+        <div class="teacher-item">
+            <img src="images/img_1.png" class="teacher-item-image"/>
+            <h3>Алексеева Ольга Александровна</h3>
+            <h4>Профессиональный организатор выставок, презентаций, конференций, корпоративных и частных праздников, детских программ, фестивалей и Open Air, BTL и PR-акций , мероприятий в сфере обучения и консалтинга. Талантливый педагог, преподаёт курс «Event-менеджмент» в Центре «Специалист».</h4>
+        </div>
+        <div class="teacher-item">
+            <img src="images/img_1.png" class="teacher-item-image"/>
+            <h3>Алексеева Ольга Александровна</h3>
+            <h4>Профессиональный организатор выставок, презентаций, конференций, корпоративных и частных праздников, детских программ, фестивалей и Open Air, BTL и PR-акций , мероприятий в сфере обучения и консалтинга. Талантливый педагог, преподаёт курс «Event-менеджмент» в Центре «Специалист».</h4>
+        </div>
+    </div>
+</div>
 <div class="container footer">
-
+    <img src="images/logo.png" class="logo logo_footer">
+    <div class="header_wrapper footer_wrapper">
+        <a class="header_link" href="#">Главная</a>
+        <a class="header_link" href="#">Уроки</a>
+        <a class="header_link" href="#">Формулы</a>
+    </div>
+    <div class="header_wrapper links">
+        <a class="header_link" href="#"><img src="images/telegram.png"></a>
+        <a class="header_link" href="#"><img src="images/telegram.png"></a>
+        <a class="header_link" href="#"><img src="images/telegram.png"></a>
+    </div>
 </div>
 </body>
 </html>
