Третий урок(Сделали страницу формулы)

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="header">
         <img src="images/logo.png" class="logo">
         <div class="header_wrapper">
-            <a class="header_link" href="#">Главная</a>
+            <a class="header_link" href="./index.html">Главная</a>
             <a class="header_link" href="#">Уроки</a>
-            <a class="header_link" href="#">Формулы</a>
+            <a class="header_link" href="./formuls.html">Формулы</a>
         </div>
     </div>
     <div></div>
@@ -73,9 +73,9 @@
         <a class="header_link" href="#">Формулы</a>
     </div>
     <div class="header_wrapper links">
-        <a class="header_link" href="#"><img src="images/telegram.png"></a>
-        <a class="header_link" href="#"><img src="images/telegram.png"></a>
-        <a class="header_link" href="#"><img src="images/telegram.png"></a>
+        <a class="header_link" href="https://t.me/+mu8TZ81DNg44ZGRi"><img src="images/telegram.png"></a>
+        <a class="header_link" href="whatsapp://send?abid=+79156471885&text="><img src="images/whatsapp.png"></a>
+        <a class="header_link" href="mailto:khlopovartem4321@gmail.com"><img src="images/gmail.png"></a>
     </div>
 </div>
 </body>
