--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="images/logo.png" class="logo">
         <div class="header_wrapper">
             <a class="header_link" href="./index.html">Главная</a>
-            <a class="header_link" href="#">Уроки</a>
+            <a class="header_link" href="./lessons.html">Уроки</a>
             <a class="header_link" href="./formuls.html">Формулы</a>
         </div>
     </div>
