Пятый урок(Сделали выпадающий список тем, а так же адапитровали все кроме футера)

--- a/formuls.html
+++ b/formuls.html
@@ -13,9 +13,18 @@
         <img src="images/logo.png" class="logo">
         <div class="header_wrapper">
             <a class="header_link" href="./index.html">Главная</a>
-            <a class="header_link" href="./lessons.html">Уроки</a>
+            <div id="lesson_dropdown_container">
+                <a class="header_link" id="lessons" href="./lessons.html">Уроки</a>
+                <div id="lesson_dropdown">
+                    <a href="./lessons.html#kinematiks">Кинематика</a>
+                    <a href="./lessons.html#dinamika">Динамика</a>
+                    <a href="./lessons.html#kinematiks">Статика</a>
+                    <a href="./lessons.html#kinematiks">Ядерная физика</a>
+                </div>
+            </div>
             <a class="header_link" href="./formuls.html">Формулы</a>
         </div>
+        <img src="images/menu.png" id="burger_button">
     </div>
     <div></div>
     <div class="title">
