Шестое урок(Закончили адаптацию под мобильные ус-ва. Базово составили идею для конспектов)

--- a/formuls.html
+++ b/formuls.html
@@ -5,9 +5,18 @@
     <title>Title</title>
     <link type="text/css" rel="stylesheet" href="css/index.css">
     <link type="text/css" rel="stylesheet" href="css/formuls.css">
+    <script type="text/javascript" src="js/base.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </head>
 <body>
+<div class="modal_nav" id="modal_nav">
+    <img src="images/close.png" id="close"/>
+    <div class="modal_nav_wrapper">
+        <a class="header_link header_mobile_link" href="./index.html">Главная</a>
+        <a class="header_link header_mobile_link" href="./lessons.html">Уроки</a>
+        <a class="header_link header_mobile_link" href="./formuls.html">Формулы</a>
+    </div>
+</div>
 <div class="container main">
     <div class="header">
         <img src="images/logo.png" class="logo">
