--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <title>Образовательный портал по физике</title>
     <link type="text/css" rel="stylesheet" href="css/index.css">
+    <script type="text/javascript" src="js/base.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
+<div class="modal_nav" id="modal_nav">
+    <img src="images/close.png" id="close"/>
+    <div class="modal_nav_wrapper">
+        <a class="header_link header_mobile_link" href="./index.html">Главная</a>
+        <a class="header_link header_mobile_link" href="./lessons.html">Уроки</a>
+        <a class="header_link header_mobile_link" href="./formuls.html">Формулы</a>
+    </div>
+</div>
 <div class="container main">
     <div class="header">
         <img src="images/logo.png" class="logo">
@@ -60,28 +71,29 @@
         <div class="teacher-item">
             <img src="images/img_1.png" class="teacher-item-image"/>
             <h3>Алексеева Ольга Александровна</h3>
-            <h4>Профессиональный организатор выставок, презентаций, конференций, корпоративных и частных праздников, детских программ, фестивалей и Open Air, BTL и PR-акций , мероприятий в сфере обучения и консалтинга. Талантливый педагог, преподаёт курс «Event-менеджмент» в Центре «Специалист».</h4>
+            <h4>Профессиональный организатор выставок, презентаций, конференций, корпоративных и частных праздников,
+                детских программ, фестивалей и Open Air, BTL и PR-акций , мероприятий в сфере обучения и консалтинга.
+                Талантливый педагог, преподаёт курс «Event-менеджмент» в Центре «Специалист».</h4>
         </div>
         <div class="teacher-item">
             <img src="images/img_1.png" class="teacher-item-image"/>
             <h3>Алексеева Ольга Александровна</h3>
-            <h4>Профессиональный организатор выставок, презентаций, конференций, корпоративных и частных праздников, детских программ, фестивалей и Open Air, BTL и PR-акций , мероприятий в сфере обучения и консалтинга. Талантливый педагог, преподаёт курс «Event-менеджмент» в Центре «Специалист».</h4>
+            <h4>Профессиональный организатор выставок, презентаций, конференций, корпоративных и частных праздников,
+                детских программ, фестивалей и Open Air, BTL и PR-акций , мероприятий в сфере обучения и консалтинга.
+                Талантливый педагог, преподаёт курс «Event-менеджмент» в Центре «Специалист».</h4>
         </div>
         <div class="teacher-item">
             <img src="images/img_1.png" class="teacher-item-image"/>
             <h3>Алексеева Ольга Александровна</h3>
-            <h4>Профессиональный организатор выставок, презентаций, конференций, корпоративных и частных праздников, детских программ, фестивалей и Open Air, BTL и PR-акций , мероприятий в сфере обучения и консалтинга. Талантливый педагог, преподаёт курс «Event-менеджмент» в Центре «Специалист».</h4>
+            <h4>Профессиональный организатор выставок, презентаций, конференций, корпоративных и частных праздников,
+                детских программ, фестивалей и Open Air, BTL и PR-акций , мероприятий в сфере обучения и консалтинга.
+                Талантливый педагог, преподаёт курс «Event-менеджмент» в Центре «Специалист».</h4>
         </div>
     </div>
 </div>
 <div class="container footer">
     <img src="images/logo.png" class="logo logo_footer">
-    <div class="header_wrapper footer_wrapper">
-        <a class="header_link" href="#">Главная</a>
-        <a class="header_link" href="#">Уроки</a>
-        <a class="header_link" href="#">Формулы</a>
-    </div>
-    <div class="header_wrapper links">
+    <div class="header_wrapper links header_wrapper_icon">
         <a class="header_link" href="https://t.me/+mu8TZ81DNg44ZGRi"><img src="images/telegram.png"></a>
         <a class="header_link" href="whatsapp://send?abid=+79156471885&text="><img src="images/whatsapp.png"></a>
         <a class="header_link" href="mailto:khlopovartem4321@gmail.com"><img src="images/gmail.png"></a>
