Седьмой урок(Закончили все правки по адаптации под мобилку, добавили анимацию, чуть чуть улучшили страницу уроки)

--- a/lessons.html
+++ b/lessons.html
@@ -41,7 +41,6 @@
         <h1>Проект</h1>
         <h3 class="subtitle">Мы крутые</h3>
     </div>
-    <img id="circle" src="images/circle.png">
 </div>
 <div class="container lessons">
     <div class="lesson_item">
@@ -56,17 +55,52 @@
                 allowfullscreen></iframe>
         <div class="lesson_text">
             <div class="text_item_container">
-                <div class="text_item"><h4 class="text_item_title">Механика</h4><p> - раздел физики, изучающий механическое движение.</p></div>
-                <div class="text_item"><h4 class="text_item_title">Механическое движение</h4><p> - это изменение положения тела в пространстве относительно других тел с течением времени.</p></div>
-                <div class="text_item"><h4 class="text_item_title">Кинематика</h4><p> - раздел механики, изучающий геометрические характеристики механического движения.</p></div>
+                <div class="text_item"><h4 class="text_item_title">Механика</h4>
+                    <p> - раздел физики, изучающий механическое движение.</p></div>
+                <div class="text_item"><h4 class="text_item_title">Механическое движение</h4>
+                    <p> - это изменение положения тела в пространстве относительно других тел с течением времени.</p>
+                </div>
+                <div class="text_item"><h4 class="text_item_title">Кинематика</h4>
+                    <p> - раздел механики, изучающий геометрические характеристики механического движения.</p></div>
             </div>
             <div class="text_item_container">
-                <div class="text_item"><h4 class="text_item_title">Траектория</h4><p> - линия, которую описывает тело при своем движении.</p></div>
-                <div class="text_item"><h4 class="text_item_title">Путь</h4><p> - длина траектории.</p></div>
-                <div class="text_item"><h4 class="text_item_title">Перемещение</h4><p> - направленный отрезок (вектор), соединяющий начальное и конечное
-                    положения тела при его движении.</p></div>
+                <div class="text_item"><h4 class="text_item_title">Траектория</h4>
+                    <p> - линия, которую описывает тело при своем движении.</p></div>
+                <div class="text_item"><h4 class="text_item_title">Путь</h4>
+                    <p> - длина траектории.</p></div>
+                <div class="text_item"><h4 class="text_item_title">Перемещение</h4>
+                    <p> - направленный отрезок (вектор), соединяющий начальное и конечное
+                        положения тела при его движении.</p></div>
             </div>
-            <p>Механическое движение всегда рассматривают относительно некоторой системы отчета, которая позволяет определить характеристики этого движения.</p>
+            <p class="centered">Механическое движение всегда рассматривают относительно некоторой системы отчета, которая позволяет
+                определить характеристики этого движения.</p>
+            <p class="centered">Систему отсчета образуют тело отсчета, связанная с ним прямоугольная система координат и прибор для
+                измерения времени (часы).</p>
+            <div class='table'>
+                <table>
+                    <caption>Виды механического движения</caption>
+                    <tr>
+                        <th colspan="2" style="width: 600px">по виду траектории</th>
+                        <th colspan="2" style="width: 600px">по характеру движения</th>
+                    </tr>
+                    <tr class="ths_non_line">
+                        <th>прямолинейное</th>
+                        <th>криволинейное</th>
+                        <th>равномерное (с постоянной скоростью)</th>
+                        <th>равнопеременное (с постоянным ускорением)</th>
+                    </tr>
+                </table>
+            </div>
+            <p class="centered">Физические величины, характеризующие механическое движение</p>
+            <p class="centered">Прямолинейное равномерное движение</p>
+            <img id="kinematika1" src="images/kinematika1.png">
+            <p class="centered">Прямолинейное равнопеременное движение</p>
+            <img id="kinematika2" src="images/kinematika2.png">
+            <h4 class="centered sub-title">Движение в поле силы тяжести</h4>
+            <p class="centered">Свободным падением называется движение, которое совершило бы тело только под действием силы тяжести без
+                учета сопротивления воздуха.</p>
+            <img id="kinematika3" src="images/kinematika3.png">
+            <img id="kinematika4" src="images/kinematika4.png">
         </div>
     </div>
 
@@ -80,12 +114,86 @@
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
-        <div class="lesson_text">
-            <img id="dinamika1" src="images/dinamika1_1.png">
-            <img id="dinamika1" src="images/dinamika1_2.png">
-            <img id="dinamika1" src="images/dinamika2_1.png">
-            <img id="dinamika1" src="images/dinamika2_2.png">
-            <img id="dinamika1" src="images/dinamika2_3.png">
+        <div class="lesson_text h4_centered">
+            <h4>Силы в механике</h4>
+            <img src="images/dinamika1.png">
+            <img src="images/dinamika2.png">
+            <h4>Динамика. Законы Ньютона</h4>
+            <div class="container">
+                <h4>Первый закон Ньютона (закон инерции)</h4>
+                <p>Существуют такие системы отсчета, относительно которых тело сохраняет свое состояние покоя
+                    или равномерного прямолинейного движения, если на него не действуют другие тела или действия других
+                    тел скомпенсировано.</p>
+                <img src="images/dinamika3.png">
+                <h4>Инерциальная система отчета</h4>
+                <p>Системы отсчета, относительно которых тело движется прямолинейно и равномерно или покоится,
+                    если на него не действуют другие тела или действие других тел скомпенсировано называют инерциальными
+                    системами отсчета.</p>
+                <p>(Другими словами инерциальная система отсчета (ИСО) не обладает ускорением! a = 0)</p>
+            </div>
+            <div class="container">
+                <h4>Второй закон Ньютона (закон движения)</h4>
+                <p>Сила, действующая на тело, равна произведению массы тела на сообщаемое этой силой ускорение</p>
+                <img src="images/dinamika4.png">
+                <p>Если на тело действуют несколько сил, то второй закон Ньютона звучит: векторная сумма всех
+                    сил, действующих на тело (равнодействующая сила), равна произведению массы тела на сообщаемое
+                    этой силой ускорение</p>
+                <img src="images/dinamika5.png">
+            </div>
+            <div class="container">
+                <h4>Третий закон Ньютона (закон взаимодействия)</h4>
+                <p>Тела взаимодействуют между собой с силами, которые направлены вдоль прямой соединяющей эти тела,
+                    равны по модулю и противоположны по направлению.</p>
+                <img src="images/dinamika6.png">
+            </div>
+        </div>
+    </div>
+
+    <div class="lesson_item">
+        <div class="lesson_item_title">
+            <img class="more" src="images/circle.png">
+            <a name="dinamika"></a>
+            <h2 class="title_lesson">Статика</h2>
+        </div>
+        <iframe class="lesson_video" width="560" height="315" src="https://www.youtube.com/embed/2JGbRnJfG0g"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        <div class="lesson_text h4_centered">
+            <p>Статикой называют раздел механики, изучающий условия равновесия тел.</p>
+            <p>Для того чтобы тело находилось в равновесии (было неподвижным) необходимо выполнение двух условий.</p>
+            <p>Первое условие равновесия тел (I закон Ньютона): чтобы невращающееся тело находилось в равновесии,
+                необходимо, чтобы равнодействующая всех сил, приложенных к телу, была равна нулю.</p>
+            <img src="images/dinamika1.png">
+            <img src="images/dinamika2.png">
+            <h4>Динамика. Законы Ньютона</h4>
+            <div class="container">
+                <h4>Первый закон Ньютона (закон инерции)</h4>
+                <p>Существуют такие системы отсчета, относительно которых тело сохраняет свое состояние покоя
+                    или равномерного прямолинейного движения, если на него не действуют другие тела или действия других
+                    тел скомпенсировано.</p>
+                <img src="images/dinamika3.png">
+                <h4>Инерциальная система отчета</h4>
+                <p>Системы отсчета, относительно которых тело движется прямолинейно и равномерно или покоится,
+                    если на него не действуют другие тела или действие других тел скомпенсировано называют инерциальными
+                    системами отсчета.</p>
+                <p>(Другими словами инерциальная система отсчета (ИСО) не обладает ускорением! a = 0)</p>
+            </div>
+            <div class="container">
+                <h4>Второй закон Ньютона (закон движения)</h4>
+                <p>Сила, действующая на тело, равна произведению массы тела на сообщаемое этой силой ускорение</p>
+                <img src="images/dinamika4.png">
+                <p>Если на тело действуют несколько сил, то второй закон Ньютона звучит: векторная сумма всех
+                    сил, действующих на тело (равнодействующая сила), равна произведению массы тела на сообщаемое
+                    этой силой ускорение</p>
+                <img src="images/dinamika5.png">
+            </div>
+            <div class="container">
+                <h4>Третий закон Ньютона (закон взаимодействия)</h4>
+                <p>Тела взаимодействуют между собой с силами, которые направлены вдоль прямой соединяющей эти тела,
+                    равны по модулю и противоположны по направлению.</p>
+                <img src="images/dinamika6.png">
+            </div>
         </div>
     </div>
 
