--- a/index.html
+++ b/index.html
@@ -40,11 +40,15 @@
         <h1>Проект</h1>
         <h3 class="subtitle">Мы крутые</h3>
     </div>
-    <img id="circle" src="images/circle.png">
+    <a id="circle" href="#about">
+        <img src="images/icon_down.png" style="width: 40px; height: 40px; margin: auto"/>
+    </a>
+
 </div>
 <div class="container about">
     <div class="line"></div>
     <h2>О нас</h2>
+    <a name="about"></a>
     <div class="about-item about1">
         <div class="about-item-text">
             Тест Тест Тест Тест Тест Тест Тест <br/> Тест Тест Тест
